Fixed Frustum Culling

--- a/project.json
+++ b/project.json
@@ -45,7 +45,7 @@
             },
             "shininess": 0.5
         },
-        "texture_path": "",
+        "texture_path": "project/game/textures/metal grid/metalgrid2_basecolor.png",
         "type": "entity"
     },
     {
@@ -58,18 +58,18 @@
         },
         "cutOff": 10.0,
         "direction": {
-            "x": 0.20200000703334808,
+            "x": 0.30399999022483826,
             "y": 1.0,
-            "z": 0.49399998784065247
+            "z": 0.4909999966621399
         },
-        "id": -223216566,
-        "intensity": 0.8949999809265137,
-        "light_type": 1,
+        "id": -1742638848,
+        "intensity": 4.910999774932861,
+        "light_type": 2,
         "name": "",
         "position": {
-            "x": 0.7000150680541992,
-            "y": 0.900001049041748,
-            "z": 1.0999997854232788
+            "x": 13.800003051757813,
+            "y": 11.50002670288086,
+            "z": -7.700003623962402
         },
         "relative_position": {
             "x": 0.0,
