Lights as child 1/3

--- a/project.json
+++ b/project.json
@@ -160,10 +160,10 @@
             "y": 1.0,
             "z": -0.22300000488758087
         },
-        "id": 2,
+        "id": 1142259712,
         "intensity": 0.5,
-        "light_type": 2,
-        "name": "Light",
+        "light_type": 1,
+        "name": "",
         "position": {
             "x": -0.1000000610947609,
             "y": 5.799995422363281,
