Lights as child 3/3

--- a/project.json
+++ b/project.json
@@ -1,5 +1,46 @@
 [
     {
+        "children": [
+            [
+                {
+                    "attenuation": 9.999999747378752e-05,
+                    "color": {
+                        "a": 255.0,
+                        "b": 255.0,
+                        "g": 255.0,
+                        "r": 255.0
+                    },
+                    "cutOff": 10.0,
+                    "direction": {
+                        "x": 0.4000000059604645,
+                        "y": 0.4000000059604645,
+                        "z": -0.4000000059604645
+                    },
+                    "id": 4,
+                    "intensity": 0.5,
+                    "isChild": true,
+                    "light_type": 1,
+                    "name": "Light",
+                    "position": {
+                        "x": 4.0,
+                        "y": 4.0,
+                        "z": 5.400000095367432
+                    },
+                    "relative_position": {
+                        "x": 4.0,
+                        "y": -2.3000011444091797,
+                        "z": 4.099999904632568
+                    },
+                    "specularStrength": 0.5,
+                    "target": {
+                        "x": 0,
+                        "y": 0,
+                        "z": 0
+                    },
+                    "type": "light"
+                }
+            ]
+        ],
         "color": {
             "a": 255,
             "b": 255,
@@ -15,7 +56,7 @@
         "position": {
             "x": 0.0,
             "y": 6.30000114440918,
-            "z": 0.0
+            "z": 1.3000001907348633
         },
         "relative_position": {
             "x": 0.0,
@@ -145,41 +186,5 @@
         },
         "texture_path": "",
         "type": "entity"
-    },
-    {
-        "attenuation": 9.999999747378752e-05,
-        "color": {
-            "a": 255.0,
-            "b": 255.0,
-            "g": 255.0,
-            "r": 255.0
-        },
-        "cutOff": 10.0,
-        "direction": {
-            "x": 0.0010000000474974513,
-            "y": 1.0,
-            "z": -0.22300000488758087
-        },
-        "id": 1142259712,
-        "intensity": 0.5,
-        "light_type": 1,
-        "name": "",
-        "position": {
-            "x": -0.1000000610947609,
-            "y": 5.799995422363281,
-            "z": -0.10000019520521164
-        },
-        "relative_position": {
-            "x": 0,
-            "y": 0,
-            "z": 0
-        },
-        "specularStrength": 0.5,
-        "target": {
-            "x": 25047678844928.0,
-            "y": 3.061136495317563e-41,
-            "z": 722.0
-        },
-        "type": "light"
     }
 ]
