--- a/project.json
+++ b/project.json
@@ -16,7 +16,7 @@
                         "y": 0.4000000059604645,
                         "z": -0.4000000059604645
                     },
-                    "id": 4,
+                    "id": 2,
                     "intensity": 0.5,
                     "isChild": true,
                     "light_type": 1,
@@ -24,18 +24,18 @@
                     "position": {
                         "x": 4.0,
                         "y": 4.0,
-                        "z": 5.400000095367432
+                        "z": 4.0
                     },
                     "relative_position": {
                         "x": 4.0,
-                        "y": -2.3000011444091797,
-                        "z": 4.099999904632568
+                        "y": 4.0,
+                        "z": 4.0
                     },
                     "specularStrength": 0.5,
                     "target": {
-                        "x": 0,
-                        "y": 0,
-                        "z": 0
+                        "x": 5.838879321780669e-37,
+                        "y": 4.591354418360263e-41,
+                        "z": 5.782399865172581e+29
                     },
                     "type": "light"
                 }
@@ -47,113 +47,15 @@
             "g": 255,
             "r": 255
         },
-        "id": 1436382731,
+        "id": 643603355,
         "is_dynamic": false,
         "mass": 1.0,
-        "model_path": "project/game/models/Ceiling_Lamp/Ceiling_Lamp.obj",
-        "name": "project/game/models/Ceiling_Lamp/Ceiling_Lamp",
-        "normal_texture_path": "project/game/models/Ceiling_Lamp/Mat_Normal_DirectX.png",
-        "position": {
-            "x": 0.0,
-            "y": 6.30000114440918,
-            "z": 1.3000001907348633
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "rotation": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "roughness_texture_path": "project/game/models/Ceiling_Lamp/Mat_Roughness.png",
-        "scale": {
-            "x": 0.009999999776482582,
-            "y": 0.009999999776482582,
-            "z": 0.009999999776482582
-        },
-        "script_path": "",
-        "surface_material": {
-            "DiffuseIntensity": 0.5,
-            "Roughness": 0.5,
-            "SpecularIntensity": 0.5,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.5
-        },
-        "texture_path": "project/game/models/Ceiling_Lamp/Mat_Base_Color.png",
-        "type": "entity"
-    },
-    {
-        "color": {
-            "a": 255,
-            "b": 255,
-            "g": 255,
-            "r": 255
-        },
-        "id": 1436382732,
-        "is_dynamic": false,
-        "mass": 1.0,
-        "model_path": "project/game/models/cube.obj",
+        "model_path": "assets/models/tree.obj",
         "name": "Unnamed Entity",
-        "normal_texture_path": "project/game/textures/metal grid/metalgrid2_normal-ogl.png",
-        "position": {
-            "x": 0.0,
-            "y": 0.2999997138977051,
-            "z": 0.0
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "rotation": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "roughness_texture_path": "",
-        "scale": {
-            "x": 45.0,
-            "y": 0.009999999776482582,
-            "z": 45.0
-        },
-        "script_path": "",
-        "surface_material": {
-            "DiffuseIntensity": 0.5,
-            "Roughness": 0.5,
-            "SpecularIntensity": 0.5,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.5
-        },
-        "texture_path": "project/game/textures/metal grid/metalgrid2_basecolor.png",
-        "type": "entity"
-    },
-    {
-        "color": {
-            "a": 255,
-            "b": 255,
-            "g": 255,
-            "r": 255
-        },
-        "id": 1436382733,
-        "is_dynamic": true,
-        "mass": 1.0,
-        "model_path": "project/game/models/cube.obj",
-        "name": "project/game/models/test",
         "normal_texture_path": "",
         "position": {
             "x": 0.0,
-            "y": 1.4999990463256836,
+            "y": 0.0,
             "z": 0.0
         },
         "relative_position": {
@@ -172,7 +74,7 @@
             "y": 1.0,
             "z": 1.0
         },
-        "script_path": "project/game/coins collector.py",
+        "script_path": "",
         "surface_material": {
             "DiffuseIntensity": 0.5,
             "Roughness": 0.5,
@@ -186,5 +88,42 @@
         },
         "texture_path": "",
         "type": "entity"
+    },
+    {
+        "attenuation": 9.999999747378752e-05,
+        "color": {
+            "a": 255.0,
+            "b": 255.0,
+            "g": 255.0,
+            "r": 255.0
+        },
+        "cutOff": 10.0,
+        "direction": {
+            "x": 0.4000000059604645,
+            "y": 0.4000000059604645,
+            "z": -0.4000000059604645
+        },
+        "id": 2,
+        "intensity": 0.5,
+        "isChild": true,
+        "light_type": 1,
+        "name": "Light",
+        "position": {
+            "x": 4.0,
+            "y": 4.0,
+            "z": 4.0
+        },
+        "relative_position": {
+            "x": 4.0,
+            "y": 4.0,
+            "z": 4.0
+        },
+        "specularStrength": 0.5,
+        "target": {
+            "x": 5.838879321780669e-37,
+            "y": 4.591354418360263e-41,
+            "z": 5.782399865172581e+29
+        },
+        "type": "light"
     }
 ]
