--- a/imgui.ini
+++ b/imgui.ini
@@ -9,14 +9,14 @@ Size=437,169
 Collapsed=0
 
 [Window][Assets Explorer]
-Pos=372,580
+Pos=397,580
 Size=618,320
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Code Editor Window]
-Pos=992,580
-Size=494,320
+Pos=1017,580
+Size=469,320
 Collapsed=0
 DockId=0x00000006,0
 
@@ -33,8 +33,8 @@ Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Scene Editor Window]
-Pos=372,56
-Size=1114,522
+Pos=397,56
+Size=1089,522
 Collapsed=0
 DockId=0x00000001,0
 
@@ -83,14 +83,22 @@ Pos=60,60
 Size=400,200
 Collapsed=0
 
+[Window][Objects List]
+Pos=0,56
+Size=395,844
+Collapsed=0
+DockId=0x00000007,0
+
 [Docking][Data]
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,56 Size=1900,844 Split=X
-  DockNode        ID=0x00000009 Parent=0x8B93E3BD SizeRef=1486,844 Split=X
-    DockNode      ID=0x00000003 Parent=0x00000009 SizeRef=370,844 Selected=0x0F5F40DF
-    DockNode      ID=0x00000004 Parent=0x00000009 SizeRef=1114,844 Split=Y
-      DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=1900,522 Selected=0x44D9F559
-      DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=1900,320 Split=X
-        DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=618,423 Selected=0x1FC0499E
-        DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=494,423 CentralNode=1 Selected=0xF2B1FC4A
-  DockNode        ID=0x0000000A Parent=0x8B93E3BD SizeRef=412,844 Selected=0xF58E28BB
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,56 Size=1900,844 Split=X
+  DockNode          ID=0x00000007 Parent=0x8B93E3BD SizeRef=395,844 Selected=0x2C630E19
+  DockNode          ID=0x00000008 Parent=0x8B93E3BD SizeRef=1503,844 Split=X
+    DockNode        ID=0x00000009 Parent=0x00000008 SizeRef=1486,844 Split=X
+      DockNode      ID=0x00000003 Parent=0x00000009 SizeRef=370,844 Selected=0x0F5F40DF
+      DockNode      ID=0x00000004 Parent=0x00000009 SizeRef=1114,844 Split=Y
+        DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=1900,522 Selected=0x44D9F559
+        DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=1900,320 Split=X
+          DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=618,423 Selected=0x1FC0499E
+          DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=494,423 CentralNode=1 Selected=0xF2B1FC4A
+    DockNode        ID=0x0000000A Parent=0x00000008 SizeRef=412,844 Selected=0xF58E28BB
 
