--- a/project.json
+++ b/project.json
@@ -6,15 +6,15 @@
             "g": 255,
             "r": 255
         },
-        "id": -821273565,
+        "id": 358298463,
         "is_dynamic": false,
         "mass": 1.0,
-        "model_path": "project/game/models/plane.obj",
-        "name": "project/game/models/plane",
-        "normal_texture_path": "project/game/abc.mp4",
+        "model_path": "project/game/models/cube.obj",
+        "name": "project/game/models/cube",
+        "normal_texture_path": "",
         "position": {
             "x": 0.0,
-            "y": 0.5999994277954102,
+            "y": 0.0,
             "z": 0.0
         },
         "relative_position": {
@@ -29,23 +29,23 @@
         },
         "roughness_texture_path": "",
         "scale": {
-            "x": 10.0,
+            "x": 1.0,
             "y": 1.0,
-            "z": 10.0
+            "z": 1.0
         },
         "script_path": "",
         "surface_material": {
-            "DiffuseIntensity": 0.5,
-            "Roughness": 0.5,
-            "SpecularIntensity": 0.5,
+            "DiffuseIntensity": 0.12399999797344208,
+            "Roughness": 0.1120000034570694,
+            "SpecularIntensity": 0.16899999976158142,
             "SpecularTint": {
                 "x": 1.0,
                 "y": 1.0,
                 "z": 1.0
             },
-            "shininess": 0.5
+            "shininess": 0.4020000100135803
         },
-        "texture_path": "project/game/textures/metal grid/metalgrid2_basecolor.png",
+        "texture_path": "",
         "type": "entity"
     },
     {
@@ -62,14 +62,14 @@
             "y": 0.4000000059604645,
             "z": -0.4000000059604645
         },
-        "id": -1377324569,
+        "id": 2,
         "intensity": 0.5,
         "isChild": false,
         "light_type": 1,
-        "name": "",
+        "name": "Light",
         "position": {
-            "x": 1.299996256828308,
-            "y": 5.100002288818359,
+            "x": 4.0,
+            "y": 4.0,
             "z": 4.0
         },
         "relative_position": {
@@ -79,9 +79,9 @@
         },
         "specularStrength": 0.5,
         "target": {
-            "x": 8.363709030900779e-13,
-            "y": 4.591354418360263e-41,
-            "z": -1920648832.0
+            "x": -1.5757794374904321e-15,
+            "y": 4.591634678053128e-41,
+            "z": 3.631046936195422e-26
         },
         "type": "light"
     }
