--- a/project.json
+++ b/project.json
@@ -1,14 +1,9 @@
 [
     {
-        "color": {
-            "a": 255,
-            "b": 255,
-            "g": 255,
-            "r": 255
-        },
-        "id": 358298463,
+        "id": 569722199,
         "is_dynamic": false,
         "mass": 1.0,
+        "material_path": "project/game/file1.mat",
         "model_path": "project/game/models/cube.obj",
         "name": "project/game/models/cube",
         "normal_texture_path": "",
@@ -34,17 +29,6 @@
             "z": 1.0
         },
         "script_path": "",
-        "surface_material": {
-            "DiffuseIntensity": 0.12399999797344208,
-            "Roughness": 0.1120000034570694,
-            "SpecularIntensity": 0.16899999976158142,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.4020000100135803
-        },
         "texture_path": "",
         "type": "entity"
     },
@@ -79,9 +63,9 @@
         },
         "specularStrength": 0.5,
         "target": {
-            "x": -1.5757794374904321e-15,
-            "y": 4.591634678053128e-41,
-            "z": 3.631046936195422e-26
+            "x": -3.961272557362839e+22,
+            "y": 4.5912142885138307e-41,
+            "z": 1.3950381385167264e-18
         },
         "type": "light"
     }
